removed duplication and updated todo

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
-2. Castling
+2. Castling (make sure it's not possible to castle if the king goes through an attacked field
 3. En passant
+4. Promoting
