--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,22 @@ write an AI that makes random moves
 
 nice to have:
 be able to setup a board manually
+
+################################################################
+Notes
+################################################################
+
+Now we have 2 places where we have the state of the board:
+a) UI
+b) Game class (it has a board property)
+those 2 has to be in sync
+
+I kind of like previous approach where we had the state in UI (godot nodes) and we would extract the important information from that state 
+and pass it to "Engine" which would make a decision on possible moves and so on.
+I think I went away from it because I needed lastMove. But lastMove could be passed in, together with the state of the board.
+
+3 things can happen to a piece:
+- moved (Position updated)
+- captured (Piece deleted)
+- promoted (Position and Texture updated)
+
