--- a/TODO.txt
+++ b/TODO.txt
@@ -3,10 +3,9 @@ add possibility to pick promoted piece:
 show captured piece
 go back to mutable Piece? too much code duplication
 show message when the game ends
-be able to start a new game
 write an AI that makes random moves
 
-bug: check mates are not detected
+bug: a pawn can jump over it's own piece (maybe also opponents') when doing 2 step move
 
 nice to have:
 be able to setup a board manually
