--- a/TODO.txt
+++ b/TODO.txt
@@ -2,13 +2,13 @@ add possibility to pick promoted piece:
 - when the window with options is shown, it should not be possible to make any moves
 show captured piece
 go back to mutable Piece? too much code duplication
-show message when the game ends
 write an AI that makes random moves
 
 bug: a pawn can jump over it's own piece (maybe also opponents') when doing 2 step move
 
 nice to have:
 be able to setup a board manually
+undo a move(s)
 
 ################################################################
 Notes
