--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,8 @@ be able to setup a board manually
 
 undo a move(s)
 
-make UI nicer. example: captured pieces should be smaller and in 2/3 rows
+make UI nicer. example: captured pieces should be smaller and in 2/3 rows. 45px is spread across code base (fx: capturedPieces has it or PieceUI).
+Try to change the size of a piece and see stuff breaking
 
 ################################################################
 Notes
