--- a/TODO.txt
+++ b/TODO.txt
@@ -3,9 +3,9 @@ add possibility to pick promoted piece:
 
 write an AI that makes random moves
 
-be able to setup a board manually
+be able to setup a board manually - nice to have
 
-undo a move(s)
+undo a move(s) - nice to have
 
 make UI nicer. example: captured pieces should be smaller and in 2/3 rows. 45px is spread across code base (fx: capturedPieces has it or PieceUI).
 Try to change the size of a piece and see stuff breaking
