--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,9 @@ be able to setup a board manually - nice to have
 
 undo a move(s) - nice to have
 
+create `ChessField` which will take care of it's own color (highlighting it and reseting the color) and will host pieces
+so we don't have to take care of snapping the pieces in PieceUI
+
 make UI nicer. example: captured pieces should be smaller and in 2/3 rows. 45px is spread across code base (fx: capturedPieces has it or PieceUI).
 Try to change the size of a piece and see stuff breaking
 
