--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,8 @@ when not enough material is left - draw
 
 when 50 moves without a pawn move or piece taken - draw
 
+something is weird with pawns moving all over the place
+
 ################################################################
 Notes
 ################################################################
