--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,11 @@
-be able to setup a board manually - nice to have
+----------- TODO ----------------------
+
+add support to select who will play the game - player or ai
+
+undo a move(s) - needed to debug games
+be able to setup a board manually - needed to debug specific positions
+
+---------- NICE TO HAVE ----------------
 
 create `ChessField` which will take care of it's own color (highlighting it and reseting the color) and will host pieces
 so we don't have to take care of snapping the pieces in PieceUI
@@ -6,11 +13,7 @@ so we don't have to take care of snapping the pieces in PieceUI
 make UI nicer. example: captured pieces should be smaller and in 2/3 rows. 45px is spread across code base (fx: capturedPieces has it or PieceUI).
 Try to change the size of a piece and see stuff breaking
 
-add support to select who will play the game - player or ai
-
-undo a move(s) - needed to debug games
-
-promotion logic needs some love - nice to have
+promotion logic needs some love
 
 ################################################################
 Notes
