--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,9 @@
 add support to select who will play the game - player or ai
 be able to setup a board manually - needed to debug specific positions
 
+BUG:
+promotionBox shows up even though a pawn cannot be promoted
+
 ---------- NICE TO HAVE ----------------
 
 create `ChessField` which will take care of it's own color (highlighting it and reseting the color) and will host pieces
