--- a/TODO.txt
+++ b/TODO.txt
@@ -1,24 +1,21 @@
 ----------- TODO ----------------------
 
-add support to select who will play the game - player or ai
-be able to setup a board manually - needed to debug specific positions
-load a DLL with an AI - test if it's possible to debug such bot
-
-BUG:
-promotionBox shows up even though a pawn cannot be promoted
-A game played by AIs can be interrupted by a human and then it's impossible to return to AI mode
+# add perft tests https://www.chessprogramming.org/Perft_Results
+# be able to setup a board manually - needed to debug specific positions
+# stop/resume AIs games
+# show/hide analyse panel (debugging)
+# present history of moves in text format (debugging)
+# load a DLL with an AI - test if it's possible to debug such bot
+# prevent setting up invalid boards
 
 ---------- NICE TO HAVE ----------------
 
-exporting/importing games - it would be cool to share games with others
-
-create `ChessField` which will take care of its own color (highlighting it and reseting the color) and will host pieces
+# exporting/importing games - it would be cool to share games with others
+# create `ChessField` which will take care of its own color (highlighting it and reseting the color) and will host pieces
 so we don't have to take care of snapping the pieces in PieceUI
-
-make UI nicer. example: captured pieces should be smaller and in 2/3 rows. 45px is spread across code base (fx: capturedPieces has it or PieceUI).
+# make UI nicer. example: captured pieces should be smaller and in 2/3 rows. 45px is spread across code base (fx: capturedPieces has it or PieceUI).
 Try to change the size of a piece and see stuff breaking
-
-promotion logic needs some love
+# promotion logic needs some love - not sure about this anymore :D
 
 ################################################################
 Notes
